<resources>
    <string name="app_name">WhatsUpClone</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="create_new_chat">create new chat</string>
    <string name="login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="no_account_go_to_signup"><u>No account? Go to Signup</u></string>
    <string name="logout">Logout</string>
    <string name="already_have_an_account_go_to_login">
        <u>Already have an account? Go to Login</u>
    </string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="profile">Profile</string>
    <string name="apply">apply</string>
    <string name="delete_account">Delete account</string>
    <string name="profile_image">Profile image</string>
    <string name="status">Status</string>
    <string name="chat">Chat</string>
    <string name="update">Update</string>

    <string name="tab_text_1">Chat</string>
    <string name="tab_text_2">Status</string>
    <string name="tab_text_3">Update</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>